--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -1,4 +1,6 @@
-
 {
-"extends": "assemblyscript/std/assembly.json"
+"extends": "assemblyscript/std/assembly.json",
+"include": [
+    "./**/*.ts"
+]
 }
